XMLtoCSV/objects/unpackaged/objects/HTML_Report_vod__c.object
<CustomObject>
    <description>Stores report files that can be displayed within the Veeva application.</description>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Text area that contains the report description.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Failure_Msg_vod__c</fullName>
        <description>Failure_Msg_vod captures the reasons for instances when file publishing is not completed successfully. It will be populated only when HTML_Report_vod.Status_vod = Failed_vod.</description>
        <label>Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>Name of the profile that this record applies to.</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_vod__c</fullName>
        <description>Used to indicate which User Profile the report is applicable for.</description>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Date_vod__c</fullName>
        <description>Indicates the end time of a job from when all records have been written back to Salesforce.</description>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the publishing job</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In_Progress_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpublished_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>HTML Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HTML Reports</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_vod</fullName>
        <active>true</active>
        <description>Account Plan Dashboard</description>
        <label>Account_Plan_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Reports_vod</fullName>
        <active>true</active>
        <description>HTML Account Reports</description>
        <label>Account_Reports_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOL_Profile_vod</fullName>
        <active>true</active>
        <description>KOL HTML Profile</description>
        <label>KOL_Profile_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Orders_vod</fullName>
        <active>true</active>
        <description>Orders Report</description>
        <label>Orders_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting_vod</fullName>
        <active>true</active>
        <description>Remote Meeting</description>
        <label>Remote_Meeting_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Territory_Insights_vod</fullName>
        <active>true</active>
        <description>HTML Territory Insights</description>
        <label>Territory_Insights_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>